Fix pom.xml, add cucamber
Fix pom.xml problems with aspectjweaver.
Add 2 profiles for testNG and Cucamber.
Add Cucamber compatibility with HttpMethodsTest.
Add scenario for HttpMethodsTest.
Change folder structure.

To run testNG profile use Profile: testNg
To run cucumber profile use Profile: cucumberTestNg